--- a/Test/app/src/main/res/values/strings.xml
+++ b/Test/app/src/main/res/values/strings.xml
@@ -20,17 +20,15 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_tools">Tools</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
-    <string name="message">Message</string>
-    <string name="open_tickets">Open Tickets</string>
-    <string name="my_tickets">My tickets</string>
+    <string name="Nearby">Nearby Services</string>
+    <string name="Break">Breakdown Information</string>
     <string name="communicate">Communicate</string>
-    <string name="share">Share</string>
-    <string name="send">Send</string>
+    <string name="Inform">Information</string>
+    <string name="FeedBack">Feedback</string>
     <string name="membershipid">AAA000000000001</string>
     <string name="tixstatus">Open</string>
     <string name="regno">1016CZ13</string>
